--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
     rel="stylesheet">
-
+    <script src="https://cdn.tailwindcss.com"></script>
   <title>CarsSpot</title>
 </head>
 
