--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,10 @@
       <a href="#" class="border border-blue-600 text-blue-600 hover:bg-blue-600 hover:text-white py-3 px-5 rounded-lg block md:inline-block">Zadzwoń do nas</a>
     </div>
   </header>
+
+  <main>
+    
+  </main>
 </body>
 
 </html>
