--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,21 @@
     </div>
   </header>
 
+  <div class="container mx-auto px-4 py-4 lg:pt-24 lg:pb-64">
+    <h5 class="roboto-condensed mb-2 text-blue-600 text-xl">Prezentacja firmy</h5>
+    <h3 class="text-4xl	bebas-neue-regular">Zobacz naszą Galerię zdjęć</h3>
+    
+
+    <ul class="flex flex-wrap text-sm font-medium text-center text-gray-500 dark:text-gray-400">
+      <li class="me-2">
+          <a href="#" class="inline-block px-4 py-3 text-white bg-blue-600 rounded-lg active" aria-current="page">Tab 1</a>
+      </li>
+      <li class="me-2">
+          <a href="#"  class="inline-block px-4 py-3 rounded-lg hover:text-gray-900 hover:bg-gray-100 dark:hover:bg-gray-800 dark:hover:text-white">Tab 2</a>
+      </li>
+    </ul>
+
+  </div>
   
 </body>
 
