--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,10 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.14.0/themes/base/jquery-ui.css">
-
-    <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.14.0/themes/base/jquery-ui.css">
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+  <script src="https://cdn.tailwindcss.com"></script>
   <title>CarsSpot</title>
 </head>
 
@@ -48,7 +49,7 @@
     </div>
   </header>
 
-  <div class="container mx-auto px-4 py-4 lg:py-32">
+  <div class="container mx-auto px-4 py-4 lg:py-32 overflow-hidden">
     <h5 class="roboto-condensed mb-2 text-blue-600 text-xl">Prezentacja firmy</h5>
     <h3 class="text-4xl	bebas-neue-regular">Zobacz naszą Galerię zdjęć</h3>
     
@@ -59,7 +60,17 @@
         <li><a href="#tabs-2" class="bg-white text-black">Samochody dostawcze</a></li>
       </ul>
       <div id="tabs-1" class="tab-item">
-        <p>Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante. Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. Duis orci. Aliquam sodales tortor vitae ipsum. Aliquam nulla. Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.</p>
+        <div class="slider-1">
+          <div>
+            <img src="images/img-1.jpg" class="slider-1__img" alt="car">
+          </div>
+          <div>
+            <img src="images/img-2.jpg" class="slider-1__img" alt="car">
+          </div>
+          <div>
+            <img src="images/img-3.jpg" class="slider-1__img" alt="car">
+          </div>
+        </div>
       </div>
       <div id="tabs-2" class="tab-item">
         <p>Tutaj można wstawić drugi slider, ale nie będę już kopiował.</p>
@@ -69,6 +80,7 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
   <script src="https://code.jquery.com/ui/1.14.0/jquery-ui.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </body>
 
 </html>
