--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="overflow-hidden header">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-xl font-bold">
         <a href="/" class="flex items-center logo">
@@ -49,7 +49,7 @@
     </div>
   </header>
 
-  <div class="container mx-auto px-4 py-4 lg:py-32 overflow-hidden">
+  <main class="container mx-auto px-4 py-4 lg:py-32 overflow-hidden">
     <h5 class="roboto-condensed mb-2 text-blue-600 text-xl">Prezentacja firmy</h5>
     <h3 class="text-4xl	bebas-neue-regular">Zobacz naszą Galerię zdjęć</h3>
     
@@ -77,7 +77,25 @@
       </div>
     </div>
 
+  </main>
+
+  <footer class="px-4 py-4 lg:py-32 text-white footer">
+    <div class="container mx-auto grid md:grid-cols-2">
+      <div>
+        <h3 class="text-2xl	bebas-neue-regular mb-5">ID NOSTRUD ENIM ESSE CONSECTETUR IN EU MOLLIT FUGIAT AUTE. VELIT NULLA COMMODO.</h3>
+        <p>Mauris varius ipsum mauris, rutrum lobortis magna efficitur a. Donec egestas, nisl vehicula feugiat ornare, diam turpis efficitur mi, ac venenatis eros ipsum ac arcu. Vestibulum et  [...]</p>
+      </div>
+    </div>
+  </footer>
+
+  <div class="border-t text-white roboto-condensed py-5 copyright">
+    <div class="container mx-auto text-center md:text-left md:flex">
+      <span class="font-semibold block">Cars Spot</span>
+      <a href="#" class="underline md:ml-auto block">Polityka prywatności</a>
+    </div>
   </div>
+
+
   <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
   <script src="https://code.jquery.com/ui/1.14.0/jquery-ui.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
