--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
     href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.14.0/themes/base/jquery-ui.css">
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
   <script src="https://cdn.tailwindcss.com"></script>
   <title>CarsSpot</title>
 </head>
@@ -73,17 +73,29 @@
         </div>
       </div>
       <div id="tabs-2" class="tab-item">
-        <p>Tutaj można wstawić drugi slider, ale nie będę już kopiował.</p>
+        <p>Tutaj można wstawić na przyklad drugi slider albo coś innego.</p>
       </div>
     </div>
 
   </main>
 
   <footer class="px-4 py-4 lg:py-32 text-white footer">
-    <div class="container mx-auto grid md:grid-cols-2">
-      <div>
+    <div class="container mx-auto grid md:grid-cols-2 gap-5">
+      <div class="mb-12 md:mb-0">
         <h3 class="text-2xl	bebas-neue-regular mb-5">ID NOSTRUD ENIM ESSE CONSECTETUR IN EU MOLLIT FUGIAT AUTE. VELIT NULLA COMMODO.</h3>
         <p>Mauris varius ipsum mauris, rutrum lobortis magna efficitur a. Donec egestas, nisl vehicula feugiat ornare, diam turpis efficitur mi, ac venenatis eros ipsum ac arcu. Vestibulum et  [...]</p>
+        <div class="pt-3 hidden excerpt">
+          <p>Mauris varius ipsum mauris, rutrum lobortis magna efficitur a. Donec egestas, nisl vehicula feugiat ornare, diam turpis efficitur mi, ac venenatis eros ipsum ac arcu. Vestibulum et  [...]</p>
+        </div>
+        <a href="#" class="mt-10 inline-block roboto-condensed text-sm border-b pb-2 excerpt-btn">Rozwiń</a>
+      </div>
+      <div class="mb-12 md:mb-0">
+        <h3 class="text-2xl	bebas-neue-regular mb-5">ID NOSTRUD ENIM ESSE CONSECTETUR IN EU MOLLIT FUGIAT AUTE. VELIT NULLA COMMODO.</h3>
+        <p>Mauris varius ipsum mauris, rutrum lobortis magna efficitur a. Donec egestas, nisl vehicula feugiat ornare, diam turpis efficitur mi, ac venenatis eros ipsum ac arcu. Vestibulum et  [...]</p>
+        <div class="pt-3 hidden excerpt">
+          <p>Mauris varius ipsum mauris, rutrum lobortis magna efficitur a. Donec egestas, nisl vehicula feugiat ornare, diam turpis efficitur mi, ac venenatis eros ipsum ac arcu. Vestibulum et  [...]</p>
+        </div>
+        <a href="#" class="mt-10 inline-block roboto-condensed text-sm border-b pb-2 excerpt-btn">Rozwiń</a>
       </div>
     </div>
   </footer>
@@ -98,7 +110,7 @@
 
   <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
   <script src="https://code.jquery.com/ui/1.14.0/jquery-ui.js"></script>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </body>
 
 </html>
